--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
             <title>Excursion</title>
             <link href="resources\css\style.css" rel="stylesheet" type="text/css">
         </head>
+        <header id="title"><h1>Discover hidden places in the world around you</h1></header>
+        <h4><button><u>Download Excursion (Coming soon!)</u></button></h4>
     </body>
 </html>
