--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
             <link href="resources\css\style.css" rel="stylesheet" type="text/css">
         </head>
         <header id="title"><h1>Discover hidden places in the world around you</h1></header>
-        <h4><button><u>Download Excursion (Coming soon!)</u></button></h4>
+        <h4><u><a href="link to download" target="_blank">Download Excursion (Coming soon!)</a></u></h4>
+    <div id="big phone">
+        <video src="C:\Users\berna\Desktop\Codecademy\projects\Excursion\resources\videos\excursion.mp4" controls>Video not supported</video>
+    </div>
+    
     </body>
 </html>
