--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         <h4><u><a href="link to download" target="_blank">Download Excursion (Coming soon!)</a></u></h4>
     
     <div id="big phone">
-        <video src="C:\Users\berna\Desktop\Codecademy\projects\Excursion\resources\videos\excursion.mp4" controls>Video not supported</video>
+        <video src="excursion.mp4" controls>Video not supported</video>
     </div>
    
     <div id="picture">
         <h2>Your personal travel guide</h2>
         <h3>Excursion remembers places you like, and recommendss new points of interest around you.</h3>
-        <img src="C:\Users\berna\Desktop\Codecademy\projects\Excursion\resources\images\camp.webp">
+        <img src="camp.webp">
     </div> 
     
     <div>
-        <img src="C:\Users\berna\Desktop\Codecademy\projects\Excursion\resources\images\phone.webp">
+        <img src="phone.webp">
         <h2>Coming soon for iphone and Android</h2>
         <h4><u><a href="link to download" target="_blank">Download Excursion (Coming soon!)</a></u></h4>
     </div>
